--- a/.gitignore
+++ b/.gitignore
@@ -233,6 +233,7 @@ pyrightconfig.json
 
 
 # 특정 경로안의 특정 파일 제외
-pages/limtest.py
+pages/chat.py
+utils/router.py
 .streamlit/secrets.toml
 data/mountain_names_english.csv
