--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-folium==0.20.0
-gpxpy==1.6.2
-matplotlib==3.10.8
-numpy==2.4.0
-pandas==2.3.3
-Pillow==12.0.0
-plotly==5.24.1
-protobuf==6.33.2
-seaborn==0.13.2
-streamlit==1.52.2
-streamlit_folium==0.25.3
-wordcloud==1.9.4
-google-generativeai>=0.3.0
+streamlit
+pandas
+numpy
+folium
+streamlit-folium
+matplotlib
+seaborn
+plotly
+wordcloud
+gpxpy
+google-genai
+google-generativeai
+watchdog
+python-dotenv
